RESOLVED FIXED71273
[Qt][WK2] Fix valgrind error about uninitialized variable
https://bugs.webkit.org/show_bug.cgi?id=71273
Summary [Qt][WK2] Fix valgrind error about uninitialized variable
Simon Hausmann
Reported 2011-11-01 02:30:47 PDT
[Qt][WK2] Fix valgrind error about uninitialized variable
Attachments
Fix valgrind warning about uninitialized isPrimary variable (1.35 KB, patch)
2011-11-01 02:40 PDT, Simon Hausmann
kenneth: review+
Simon Hausmann
Comment 1 2011-11-01 02:40:05 PDT
Created attachment 113148 [details] Fix valgrind warning about uninitialized isPrimary variable
Simon Hausmann
Comment 2 2011-11-01 02:47:31 PDT
Comment on attachment 113148 [details] Fix valgrind warning about uninitialized isPrimary variable I'll land it manually right before the other patch
Simon Hausmann
Comment 3 2011-11-01 02:55:04 PDT
Note You need to log in before you can comment on or make changes to this bug.