[Qt][WK2] Fix valgrind error about uninitialized variable https://bugs.webkit.org/show_bug.cgi?id=71273

Reviewed by Kenneth Christiansen.

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::notify): Initialize isPrimary.

Canonical link: https://commits.webkit.org/87547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98942 268f45cc-cd09-0410-ab3c-d52691b4dbfc